Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section id="contact">
         <h2>Контакти</h2>
         <p>📍 Адреса RP: Установа виконання покарань №1 (м. Київ)<br>
-        👮 Керівник: Полковник Владислав Поліщук<br>
+        👮 Керівник: Генерал Владлен Поліщук<br>
         💬 Discord: <b>discord.gg/ukrainegta</b><br>
         🌐 GitHub Pages: <b>vladov756.github.io/dkvs/</b></p>
     </section>
